update services page

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <div class="middle-card-inner">
             <div class="star-left">
               <span style="margin-bottom: 16px">Reviewed on</span>
-              <p style="color: black"><strong>Clutch</strong></p>
+              <p style="color: black;padding-top:15px;"><strong>Clutch</strong></p>
             </div>
             <div class="star-right">
               <p>⭐️ ⭐️ ⭐️ ⭐️ ⭐️</p>
