--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <!-- <link rel="icon" type="image/x-icon" href="/images/favicon.ico" /> -->
+    <link rel="icon" href="https://snabbtech.com/favicon.ico">
     <title>SnabbTech | Software Developent & IT Consulting</title>
     <link rel="stylesheet" href="./css/style.css" />
     <link
@@ -852,7 +853,7 @@
       </div>
     </section>
 
-    
+
     <!-- Section Footer -->
  <footer id="footer">
       <div class="row mt-5">
