--- a/services.html
+++ b/services.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+     <link rel="icon" href="https://snabbtech.com/favicon.ico">
     <title>Custom Software Devlopment | Snabb Tech</title>
     <link rel="stylesheet" href="./css/services.css" />
     <link
